# cpong

./: CMakeLists.txt
include/: catch.hpp
src/: Main.cpp
src/Engine/Audio/: Audio.cpp  Audio.h
src/Engine/Core/: Core.h  HardwareInfo.cpp  HardwareInfo.h  Logger.cpp  Logger.h  PlatformDetection.cpp  PlatformDetection.h
src/Engine/Input/: Input.cpp  Input.h  KeyCodes.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Window/: Window.cpp  Window.h
src/Game/: Game.cpp  Game.h
src/Game/AI/: AI.cpp  AI.h
src/Game/Ball/: Ball.cpp  Ball.h
src/Game/Paddle/: Paddle.cpp  Paddle.h
src/Game/Player/: Player.cpp  Player.h
tests/: WindowTests.cpp
